fixed whitespace between images
fixed whitespace between images

--- a/css/site.css
+++ b/css/site.css
@@ -97,6 +97,11 @@ img {
     clear: both;
 }
 
+.row {
+/*    Workaround to remove whitespace between images.*/
+    font-size: 0;
+}
+
 /* MOBILE RULES */
 
 @media only screen and (max-width: 600px) {
